# binary-store

./: README.md  binary-store.cabal  changelog.md  circle.yml  jenkins.sh  stack.yaml
Format/: BinaryStore.hs
Format/BinaryStore/: Sequence.hs
bench/: Main.hs
experiment/: compile.sh  size.htex
test/: Main.hs
